# openclaw

./: .gitignore  .replit  README.md  pyproject.toml  replit.md
attached_assets/: Pasted-Adicione-as-seguintes-melhorias-ao-OpenClaw-Command-Cen_1777753870460.txt  Pasted-Crie-um-Command-Center-para-OpenClaw-em-Python-FastAPI-_1777752181363.txt
command-center/: command_center.db  database.py  docker-compose.yml  main.py  requirements.txt
command-center/static/: agents.html  channels.html  chat.html  costs.html  cron.html  dashboard.html  history.html  settings.html  skills.html
command-center/static/css/: style.css
command-center/static/js/: agents.js  channels.js  chat.js  costs.js  cron.js  dashboard.js  history.js  settings.js  shared.js  skills.js
graphify-out/: .graphify_analysis.json  .graphify_semantic_marker  graph.json  manifest.json
