[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "fastapi==0.115.5",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.32.1",
]
